--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         run: npm i   
       # build
       - name: Build app bundle
-        run: npm run build-prod 
+        run: npm run build
       # deployd in github pages
       - name : Deploy in Pages
         uses: crazy-max/ghaction-github-pages@v3.1.0
