--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "start-server": "ng serve --host 0.0.0.0",
     "build": "ng build",
+    "build:prod": "ng build --configuration production --base-href /weekly-meals/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
