--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name : Deploy in Pages
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with: 
-          build_dir: dist/mi-lista-app
+          build_dir: dist/weekly-meals
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
